<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/app_background"

    android:layoutDirection="inherit"
    >


    <EditText
        android:id="@+id/displayEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/str_money"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/tanAcent"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"


        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layoutDirection="inherit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="60dp"
            android:layout_height="54dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:textSize="24sp"
            android:background="@drawable/button_background"
            android:text="@string/dinideText"
            android:textColor="@color/tanAcent"
            app:layout_constraintStart_toEndOf="@+id/btnParethesesclose"
            app:layout_constraintTop_toBottomOf="@+id/btnDelete" />

        <Button
            android:id="@+id/btnParetheseOpen"
            android:layout_width="60dp"
            android:layout_height="54dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:textSize="24sp"
            android:background="@drawable/button_background"

            android:text="@string/parenthesesOpenText"

            android:textColor="@color/tanAcent"

            app:layout_constraintStart_toEndOf="@+id/btnClear"
            app:layout_constraintTop_toBottomOf="@+id/btnDelete" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="60dp"
            android:layout_height="54dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:textSize="24sp"
            android:background="@drawable/button_clear_background"

            android:text="@string/clearText"

            android:textColor="@color/tanAcent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnDelete" />

        <Button
            android:id="@+id/btnParethesesclose"
            android:layout_width="60dp"
            android:layout_height="54dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:textSize="24sp"
            android:background="@drawable/button_background"
            android:text="@string/parenthesesCloseText"
            android:textColor="@color/tanAcent"

            app:layout_constraintStart_toEndOf="@+id/btnParetheseOpen"
            app:layout_constraintTop_toBottomOf="@+id/btnDelete" />

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_delete_background"


            android:contentDescription="@string/backspaceText"
            android:textColor="@color/tanAcent"
            app:layout_constraintEnd_toEndOf="@+id/btnDivide"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/btnDivide"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/button_delete_background" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="60dp"
            android:layout_height="54dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:textSize="24sp"
            android:background="@drawable/button_background"
            android:text="@string/sevenText"
            android:textColor="@color/tanAcent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnClear" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="60dp"
            android:layout_height="54dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:textSize="24sp"
            android:background="@drawable/button_background"

            android:text="@string/eightText"
            android:textColor="@color/tanAcent"

            app:layout_constraintStart_toEndOf="@+id/btn7"
            app:layout_constraintTop_toBottomOf="@+id/btnParetheseOpen" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="60dp"
            android:layout_height="54dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:textSize="24sp"
            android:background="@drawable/button_background"

            android:text="@string/nineText"
            android:textColor="@color/tanAcent"

            app:layout_constraintStart_toEndOf="@+id/btn8"
            app:layout_constraintTop_toBottomOf="@+id/btnParethesesclose" />

        <Button
            android:id="@+id/btnMult"
            android:layout_width="60dp"
            android:layout_height="54dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:textSize="24sp"
            android:background="@drawable/operation_buttons_background"

            android:text="@string/multiplateText"
            android:textColor="@color/tanAcent"

            app:layout_constraintStart_toEndOf="@+id/btn9"
            app:layout_constraintTop_toBottomOf="@+id/btnDivide" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="60dp"
            android:layout_height="54dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:textSize="24sp"
            android:background="@drawable/button_background"

            android:text="@string/fourText"
            android:textColor="@color/tanAcent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn7" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="60dp"
            android:layout_height="54dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:textSize="24sp"
            android:background="@drawable/button_background"

            android:text="@string/fiveText"
            android:textColor="@color/tanAcent"

            app:layout_constraintStart_toEndOf="@+id/btn4"
            app:layout_constraintTop_toBottomOf="@+id/btn8" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="60dp"
            android:layout_height="54dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:textSize="24sp"
            android:background="@drawable/button_background"

            android:text="@string/sixText"
            android:textColor="@color/tanAcent"

            app:layout_constraintStart_toEndOf="@+id/btn5"
            app:layout_constraintTop_toBottomOf="@+id/btn9" />

        <Button
            android:id="@+id/btnSub"
            android:layout_width="60dp"
            android:layout_height="54dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:textSize="24sp"
            android:background="@drawable/operation_buttons_background"

            android:text="@string/subtractionText"
            android:textColor="@color/tanAcent"

            app:layout_constraintStart_toEndOf="@+id/btn6"
            app:layout_constraintTop_toBottomOf="@+id/btnMult" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="60dp"
            android:layout_height="54dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"

            android:background="@drawable/button_background"

            android:text="@string/oneText"

            android:textColor="@color/tanAcent"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn4" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="60dp"
            android:layout_height="54dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:textSize="24sp"
            android:background="@drawable/button_background"

            android:text="@string/twoText"
            android:textColor="@color/tanAcent"

            app:layout_constraintStart_toEndOf="@+id/btn1"
            app:layout_constraintTop_toBottomOf="@+id/btn5" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="60dp"
            android:layout_height="54dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:textSize="24sp"
            android:background="@drawable/button_background"

            android:text="@string/threeText"
            android:textColor="@color/tanAcent"

            app:layout_constraintStart_toEndOf="@+id/btn2"
            app:layout_constraintTop_toBottomOf="@+id/btn6" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="60dp"
            android:layout_height="54dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:textSize="24sp"
            android:background="@drawable/operation_buttons_background"

            android:text="@string/addationText"
            android:textColor="@color/tanAcent"

            app:layout_constraintStart_toEndOf="@+id/btn3"
            app:layout_constraintTop_toBottomOf="@+id/btnSub" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:textSize="24sp"
            android:background="@drawable/button_background"

            android:text="@string/zeroText"
            android:textColor="@color/tanAcent"

            app:layout_constraintEnd_toStartOf="@+id/btnDot"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn2" />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="60dp"
            android:layout_height="54dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:textSize="24sp"
            android:background="@drawable/button_background"

            android:text="@string/dotText"
            android:textColor="@color/tanAcent"

            app:layout_constraintEnd_toStartOf="@+id/btnEqual"
            app:layout_constraintTop_toBottomOf="@+id/btn3" />

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="60dp"
            android:layout_height="54dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:textSize="24sp"
            android:background="@drawable/button_background"

            android:text="@string/equalText"
            android:textColor="@color/tanAcent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

        <Button
            android:id="@+id/btnOK_calc"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="7dp"

            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:background="@drawable/button_background"

            android:text="@string/str_ok"
            android:textColor="@color/tanAcent"

            app:layout_constraintEnd_toStartOf="@+id/btnDelete"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteY="13dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>