<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layoutDirection="rtl"
    android:layout_height="150dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="ltr"
        android:textDirection="rtl"
        >


        <EditText
            android:id="@+id/et_person_name"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:drawableBottom="@color/red"
            android:textColor="@color/black"
            android:ems="10"
            android:hint="name"
            android:inputType="textPersonName"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_add_account_amount"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="22dp"
            android:ems="10"
            android:hint="@string/str_deal_amount"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toStartOf="@+id/et_person_name"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_add_account_calculator"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="3dp"
            app:layout_constraintEnd_toStartOf="@+id/et_add_account_amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_calculator_red" />

        <EditText
            android:id="@+id/et_add_account_deal_details"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="7dp"
            android:ems="10"
            android:hint="@string/str_deal_details"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/btn_sav_on_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_person_name" />

        <ImageView
            android:id="@+id/iv_add_account_deal_img"
            android:layout_width="52dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/et_add_account_deal_details"
            app:layout_constraintStart_toEndOf="@+id/et_add_account_deal_date"
            app:layout_constraintTop_toBottomOf="@+id/et_add_account_amount"
            app:srcCompat="@drawable/ic_camera_red" />

        <TextView
            android:id="@+id/et_add_account_deal_date"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="17dp"
            android:ems="10"
            android:hint="@string/str_date"
            android:importantForAutofill="no"
            android:inputType="date"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/iv_add_account_deal_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_add_account_amount" />

        <Button
            android:id="@+id/btn_sav_on_account"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginEnd="80dp"
            android:backgroundTint="@color/tanAcent"
            android:drawableLeft="@drawable/img_tringle_red"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/str_for_it"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn_sav_for_account"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/tanAcent"
            android:drawableLeft="@drawable/img_trigle_green"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/str_for_you"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_sav_on_account"
            app:layout_constraintHorizontal_bias="0.625"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>